# tts-generator

./: Dockerfile  docker-compose.yml  index.html  main.py  package-lock.json  package.json  pyproject.toml  qwen_engine.py  requirements.txt  vite.config.js
src/: App.jsx  index.css
src/services/: api.js
