[project]
name = "chatterbox-synth"
version = "0.1.0"
description = "FastAPI Proxy for Chatterbox and Ollama"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "httpx>=0.27.0",
    "uvicorn>=0.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
